# cg1

./: .gitignore  CMakeLists.txt  README.md  TODO.md  compile-options.md  embed.py  embed.sh  mingw-w64-toolchain.cmake
src/: cg1.c  cg1.h  instruction.c  instruction.h  main.c  program.c  program.h  util.c  util.h
src/audio/: audio.c  audio.h  audio_defs.h
src/cg1/: cg1.c  cg1.h
src/font/: font_data.h
src/instruction/: instruction.c  instruction.h  instruction_impl.h
src/program/: program.c  program.h
src/render/: cpu_primitives.c  cpu_primitives.h
src/util/: flags.c  flags.h  util.c  util.h
